<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.project.ofcourse.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_past"
        android:name="com.project.ofcourse.ui.gallery.PastFragment"
        android:label="@string/PastCourses"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.project.ofcourse.ui.slideshow.LogOutFragment"
        android:label="@string/LogOut"
        tools:layout="@layout/fragment_slideshow" />
</navigation>