<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cassycolor">


    <Button
        android:id="@+id/addCourseButton"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/button_background"
        android:text="@string/add_a_course"
        android:textColor="@color/buttonText"
        android:textColorLink="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <Button
        android:id="@+id/viewCourseListButton"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/button_background"
        android:text="@string/view_course_list"
        android:textColor="@color/buttonText"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCourseButton"
        app:layout_constraintVertical_bias="0.171" />


    <EditText
        android:id="@+id/currentSession"
        android:layout_width="176dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint=" Current Session"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewCourseListButton"
        app:layout_constraintVertical_bias="0.157" />

    <Button
        android:id="@+id/adminLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#880000"
        android:text="@string/log_out"
        android:textColor="@color/buttonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSession"
        android:layout_width="150dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/button_background"
        android:text="Add Session"
        android:textColor="@color/buttonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toEndOf="@+id/currentSession"
        app:layout_constraintTop_toBottomOf="@+id/viewCourseListButton"
        app:layout_constraintVertical_bias="0.141" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="306dp"
        android:layout_height="40dp"
        android:layout_marginBottom="72dp"
        android:text="Session Format: Session(F, W, S) Year(22, 23,...). For example, F 22"
        android:textColor="#515151"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentSession"
        app:layout_constraintVertical_bias="0.072" />


</androidx.constraintlayout.widget.ConstraintLayout>